인터페이스 impl 및 http 테스트 추가
